[mod]地區黑名單管理程式調整&補上api文件註解
