# models/areablacklistings/area-blacklistings.go
@@ -1,8 +1,8 @@
 package areablacklistings
 
-// AreaBlacklisting .
-type AreaBlacklisting struct {
-	Country string `json:"country"`
+// AreaBlacklistingModel .
+type AreaBlacklistingModel struct {
+	Country string `json:"country" validate:"required" example:"TW"`
 	Remark  string `json:"remark"`
 	Enable  *int   `json:"enable"`
 }
